# WorkLoadOptimizer

./: .gitignore  ExecuterManager.py  ExecutorManager.py  MessageCreatorAbs.py  OWLWorkerHandler.py  WorkerAbs.py  setup.cfg  setup.py
DockerFiles/: Dockerfile
MessageCreatorWorkers/: HelloWorldMessageSample.py
Utils/: textUtils.py
WLO/src/Utils/: Utils.py
WOL/src/MessageCreatorWorkers/: HelloWorldMessageSample.py
WOL/src/Workers/: HelloWorldWorkerSample.py
Workers/: HelloWorldWorkerSample.py
