[metadata]
name = WLO
version = 0.0.4
scripts='ExecuterManager.py'
author = Idan Perez
author_email = kimpatz@gmail.com
description = This is Workload Optimizer framework - more can be found at the git page
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/idanp/OWL
project_urls =
    Bug Tracker = https://github.com/idanp/OWL
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6